--- a/css/custom.css
+++ b/css/custom.css
@@ -114,13 +114,22 @@ body {
 }
 .widget ul > li:before,
 .entry-content ul > li:before {
-    content: '\f0da';
-    font-family: 'FontAwesome';
-    color: var(--bs-primary);
+    content: '';
     position: absolute;
     left: 0px;
     top: 0;
     display: inline-block;
+    width: 0.55rem;
+    height: 0.55rem;
+    background-color: var(--bs-primary);
+    -webkit-mask-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16'%3E%3Cpath d='M6.854 11.354a.5.5 0 0 1 0-.708L9.293 8 6.854 5.354a.5.5 0 1 1 .708-.708l2.793 2.854a.5.5 0 0 1 0 .708l-2.793 2.854a.5.5 0 0 1-.708 0z'/%3E%3C/svg%3E");
+    -webkit-mask-repeat: no-repeat;
+    -webkit-mask-position: center;
+    -webkit-mask-size: contain;
+    mask-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16'%3E%3Cpath d='M6.854 11.354a.5.5 0 0 1 0-.708L9.293 8 6.854 5.354a.5.5 0 1 1 .708-.708l2.793 2.854a.5.5 0 0 1 0 .708l-2.793 2.854a.5.5 0 0 1-.708 0z'/%3E%3C/svg%3E");
+    mask-repeat: no-repeat;
+    mask-position: center;
+    mask-size: contain;
 }
 .widget ul li {
 	display: block;
@@ -306,7 +315,7 @@ a:hover {
     #primary-menu > li > a:hover {
         color: var(--dark);
     }
-    .pr-md-0 {
+    .pe-md-0 {
         padding-right: 0 !important;
     }
     .dropdown-item.active, .dropdown-item:active {
